simplebool_2/parser.output
   0  $accept : %entry% $end

   1  toplevel : EOF
   2           | Command SEMI toplevel

   3  Command : Term
   4          | LCID Binder

   5  Binder : COLON Type

   6  Type : ArrowType

   7  AType : LPAREN Type RPAREN
   8        | BOOL
   9        | UUNIT

  10  ArrowType : AType ARROW ArrowType
  11            | AType

  12  Term : AppTerm
  13       | LAMBDA LCID COLON Type DOT Term
  14       | LAMBDA USCORE COLON Type DOT Term
  15       | IF Term THEN Term ELSE Term
  16       | LET LCID EQ Term IN Term

  17  AppTerm : ATerm
  18          | AppTerm ATerm
  19          | PAIR ATerm ATerm

  20  ATerm : LPAREN Term RPAREN
  21        | LCID
  22        | TRUE
  23        | FALSE
  24        | UNIT
  25        | LCURLY Term COMMA Term RCURLY

  26  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (26)

	PAIR  shift 3
	UNIT  shift 4
	LET  shift 5
	LAMBDA  shift 6
	IF  shift 7
	TRUE  shift 8
	FALSE  shift 9
	LCID  shift 10
	EOF  shift 11
	LCURLY  shift 12
	LPAREN  shift 13
	.  error

	toplevel  goto 14
	Command  goto 15
	Term  goto 16
	AppTerm  goto 17
	ATerm  goto 18


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	AppTerm : PAIR . ATerm ATerm  (19)

	UNIT  shift 4
	TRUE  shift 8
	FALSE  shift 9
	LCID  shift 19
	LCURLY  shift 12
	LPAREN  shift 13
	.  error

	ATerm  goto 20


state 4
	ATerm : UNIT .  (24)

	.  reduce 24


state 5
	Term : LET . LCID EQ Term IN Term  (16)

	LCID  shift 21
	.  error


state 6
	Term : LAMBDA . LCID COLON Type DOT Term  (13)
	Term : LAMBDA . USCORE COLON Type DOT Term  (14)

	LCID  shift 22
	USCORE  shift 23
	.  error


state 7
	Term : IF . Term THEN Term ELSE Term  (15)

	PAIR  shift 3
	UNIT  shift 4
	LET  shift 5
	LAMBDA  shift 6
	IF  shift 7
	TRUE  shift 8
	FALSE  shift 9
	LCID  shift 19
	LCURLY  shift 12
	LPAREN  shift 13
	.  error

	Term  goto 24
	AppTerm  goto 17
	ATerm  goto 18


state 8
	ATerm : TRUE .  (22)

	.  reduce 22


state 9
	ATerm : FALSE .  (23)

	.  reduce 23


state 10
	Command : LCID . Binder  (4)
	ATerm : LCID .  (21)

	COLON  shift 25
	UNIT  reduce 21
	TRUE  reduce 21
	FALSE  reduce 21
	LCID  reduce 21
	LCURLY  reduce 21
	LPAREN  reduce 21
	SEMI  reduce 21

	Binder  goto 26


state 11
	toplevel : EOF .  (1)

	.  reduce 1


state 12
	ATerm : LCURLY . Term COMMA Term RCURLY  (25)

	PAIR  shift 3
	UNIT  shift 4
	LET  shift 5
	LAMBDA  shift 6
	IF  shift 7
	TRUE  shift 8
	FALSE  shift 9
	LCID  shift 19
	LCURLY  shift 12
	LPAREN  shift 13
	.  error

	Term  goto 27
	AppTerm  goto 17
	ATerm  goto 18


state 13
	ATerm : LPAREN . Term RPAREN  (20)

	PAIR  shift 3
	UNIT  shift 4
	LET  shift 5
	LAMBDA  shift 6
	IF  shift 7
	TRUE  shift 8
	FALSE  shift 9
	LCID  shift 19
	LCURLY  shift 12
	LPAREN  shift 13
	.  error

	Term  goto 28
	AppTerm  goto 17
	ATerm  goto 18


state 14
	%entry% : '\001' toplevel .  (26)

	.  reduce 26


state 15
	toplevel : Command . SEMI toplevel  (2)

	SEMI  shift 29
	.  error


state 16
	Command : Term .  (3)

	.  reduce 3


state 17
	Term : AppTerm .  (12)
	AppTerm : AppTerm . ATerm  (18)

	UNIT  shift 4
	TRUE  shift 8
	FALSE  shift 9
	LCID  shift 19
	LCURLY  shift 12
	LPAREN  shift 13
	IN  reduce 12
	THEN  reduce 12
	ELSE  reduce 12
	COMMA  reduce 12
	RCURLY  reduce 12
	RPAREN  reduce 12
	SEMI  reduce 12

	ATerm  goto 30


state 18
	AppTerm : ATerm .  (17)

	.  reduce 17


state 19
	ATerm : LCID .  (21)

	.  reduce 21


state 20
	AppTerm : PAIR ATerm . ATerm  (19)

	UNIT  shift 4
	TRUE  shift 8
	FALSE  shift 9
	LCID  shift 19
	LCURLY  shift 12
	LPAREN  shift 13
	.  error

	ATerm  goto 31


state 21
	Term : LET LCID . EQ Term IN Term  (16)

	EQ  shift 32
	.  error


state 22
	Term : LAMBDA LCID . COLON Type DOT Term  (13)

	COLON  shift 33
	.  error


state 23
	Term : LAMBDA USCORE . COLON Type DOT Term  (14)

	COLON  shift 34
	.  error


state 24
	Term : IF Term . THEN Term ELSE Term  (15)

	THEN  shift 35
	.  error


state 25
	Binder : COLON . Type  (5)

	UUNIT  shift 36
	BOOL  shift 37
	LPAREN  shift 38
	.  error

	Type  goto 39
	ArrowType  goto 40
	AType  goto 41


state 26
	Command : LCID Binder .  (4)

	.  reduce 4


state 27
	ATerm : LCURLY Term . COMMA Term RCURLY  (25)

	COMMA  shift 42
	.  error


state 28
	ATerm : LPAREN Term . RPAREN  (20)

	RPAREN  shift 43
	.  error


state 29
	toplevel : Command SEMI . toplevel  (2)

	PAIR  shift 3
	UNIT  shift 4
	LET  shift 5
	LAMBDA  shift 6
	IF  shift 7
	TRUE  shift 8
	FALSE  shift 9
	LCID  shift 10
	EOF  shift 11
	LCURLY  shift 12
	LPAREN  shift 13
	.  error

	toplevel  goto 44
	Command  goto 15
	Term  goto 16
	AppTerm  goto 17
	ATerm  goto 18


state 30
	AppTerm : AppTerm ATerm .  (18)

	.  reduce 18


state 31
	AppTerm : PAIR ATerm ATerm .  (19)

	.  reduce 19


state 32
	Term : LET LCID EQ . Term IN Term  (16)

	PAIR  shift 3
	UNIT  shift 4
	LET  shift 5
	LAMBDA  shift 6
	IF  shift 7
	TRUE  shift 8
	FALSE  shift 9
	LCID  shift 19
	LCURLY  shift 12
	LPAREN  shift 13
	.  error

	Term  goto 45
	AppTerm  goto 17
	ATerm  goto 18


state 33
	Term : LAMBDA LCID COLON . Type DOT Term  (13)

	UUNIT  shift 36
	BOOL  shift 37
	LPAREN  shift 38
	.  error

	Type  goto 46
	ArrowType  goto 40
	AType  goto 41


state 34
	Term : LAMBDA USCORE COLON . Type DOT Term  (14)

	UUNIT  shift 36
	BOOL  shift 37
	LPAREN  shift 38
	.  error

	Type  goto 47
	ArrowType  goto 40
	AType  goto 41


state 35
	Term : IF Term THEN . Term ELSE Term  (15)

	PAIR  shift 3
	UNIT  shift 4
	LET  shift 5
	LAMBDA  shift 6
	IF  shift 7
	TRUE  shift 8
	FALSE  shift 9
	LCID  shift 19
	LCURLY  shift 12
	LPAREN  shift 13
	.  error

	Term  goto 48
	AppTerm  goto 17
	ATerm  goto 18


state 36
	AType : UUNIT .  (9)

	.  reduce 9


state 37
	AType : BOOL .  (8)

	.  reduce 8


state 38
	AType : LPAREN . Type RPAREN  (7)

	UUNIT  shift 36
	BOOL  shift 37
	LPAREN  shift 38
	.  error

	Type  goto 49
	ArrowType  goto 40
	AType  goto 41


state 39
	Binder : COLON Type .  (5)

	.  reduce 5


state 40
	Type : ArrowType .  (6)

	.  reduce 6


state 41
	ArrowType : AType . ARROW ArrowType  (10)
	ArrowType : AType .  (11)

	ARROW  shift 50
	DOT  reduce 11
	RPAREN  reduce 11
	SEMI  reduce 11


state 42
	ATerm : LCURLY Term COMMA . Term RCURLY  (25)

	PAIR  shift 3
	UNIT  shift 4
	LET  shift 5
	LAMBDA  shift 6
	IF  shift 7
	TRUE  shift 8
	FALSE  shift 9
	LCID  shift 19
	LCURLY  shift 12
	LPAREN  shift 13
	.  error

	Term  goto 51
	AppTerm  goto 17
	ATerm  goto 18


state 43
	ATerm : LPAREN Term RPAREN .  (20)

	.  reduce 20


state 44
	toplevel : Command SEMI toplevel .  (2)

	.  reduce 2


state 45
	Term : LET LCID EQ Term . IN Term  (16)

	IN  shift 52
	.  error


state 46
	Term : LAMBDA LCID COLON Type . DOT Term  (13)

	DOT  shift 53
	.  error


state 47
	Term : LAMBDA USCORE COLON Type . DOT Term  (14)

	DOT  shift 54
	.  error


state 48
	Term : IF Term THEN Term . ELSE Term  (15)

	ELSE  shift 55
	.  error


state 49
	AType : LPAREN Type . RPAREN  (7)

	RPAREN  shift 56
	.  error


state 50
	ArrowType : AType ARROW . ArrowType  (10)

	UUNIT  shift 36
	BOOL  shift 37
	LPAREN  shift 38
	.  error

	ArrowType  goto 57
	AType  goto 41


state 51
	ATerm : LCURLY Term COMMA Term . RCURLY  (25)

	RCURLY  shift 58
	.  error


state 52
	Term : LET LCID EQ Term IN . Term  (16)

	PAIR  shift 3
	UNIT  shift 4
	LET  shift 5
	LAMBDA  shift 6
	IF  shift 7
	TRUE  shift 8
	FALSE  shift 9
	LCID  shift 19
	LCURLY  shift 12
	LPAREN  shift 13
	.  error

	Term  goto 59
	AppTerm  goto 17
	ATerm  goto 18


state 53
	Term : LAMBDA LCID COLON Type DOT . Term  (13)

	PAIR  shift 3
	UNIT  shift 4
	LET  shift 5
	LAMBDA  shift 6
	IF  shift 7
	TRUE  shift 8
	FALSE  shift 9
	LCID  shift 19
	LCURLY  shift 12
	LPAREN  shift 13
	.  error

	Term  goto 60
	AppTerm  goto 17
	ATerm  goto 18


state 54
	Term : LAMBDA USCORE COLON Type DOT . Term  (14)

	PAIR  shift 3
	UNIT  shift 4
	LET  shift 5
	LAMBDA  shift 6
	IF  shift 7
	TRUE  shift 8
	FALSE  shift 9
	LCID  shift 19
	LCURLY  shift 12
	LPAREN  shift 13
	.  error

	Term  goto 61
	AppTerm  goto 17
	ATerm  goto 18


state 55
	Term : IF Term THEN Term ELSE . Term  (15)

	PAIR  shift 3
	UNIT  shift 4
	LET  shift 5
	LAMBDA  shift 6
	IF  shift 7
	TRUE  shift 8
	FALSE  shift 9
	LCID  shift 19
	LCURLY  shift 12
	LPAREN  shift 13
	.  error

	Term  goto 62
	AppTerm  goto 17
	ATerm  goto 18


state 56
	AType : LPAREN Type RPAREN .  (7)

	.  reduce 7


state 57
	ArrowType : AType ARROW ArrowType .  (10)

	.  reduce 10


state 58
	ATerm : LCURLY Term COMMA Term RCURLY .  (25)

	.  reduce 25


state 59
	Term : LET LCID EQ Term IN Term .  (16)

	.  reduce 16


state 60
	Term : LAMBDA LCID COLON Type DOT Term .  (13)

	.  reduce 13


state 61
	Term : LAMBDA USCORE COLON Type DOT Term .  (14)

	.  reduce 14


state 62
	Term : IF Term THEN Term ELSE Term .  (15)

	.  reduce 15


59 terminals, 11 nonterminals
27 grammar rules, 63 states
